# talkheui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  talkheui
documents/: README.md
documents/확장/: README.md
examples/: README.md
examples/소켓 통신 예제/: Client.aheui  Client.json  Client.lua  README.md  Server.aheui  Server.json  Server.lua
extlib/lua/: lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcode.h  lcorolib.c  lctype.c  lctype.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lprefix.h  lstate.c  lstate.h  (+18 more)
extlib/luasocket/: auxiliar.c  auxiliar.h  buffer.c  buffer.h  compat.c  compat.h  except.c  except.h  inet.c  inet.h  io.c  io.h  luasocket.c  luasocket.h  mime.c  mime.h  options.c  options.h  pierror.h  select.c  select.h  socket.h  tcp.c  tcp.h  timeout.c  timeout.h  udp.c  udp.h  usocket.c  usocket.h  wsocket.c  wsocket.h
extlib/miniz/: miniz.c
extlib/nlohmann/: adl_serializer.hpp  json.hpp  json_fwd.hpp
extlib/u5e/: basic_encodedstring.hpp  basic_grapheme.hpp  basic_grapheme_iterator.hpp  canonical_combining_order.hpp  canonical_composition.hpp  canonical_decomposition.hpp  codepoint.hpp  codepoint_decomposition.hpp  codepoint_traits.hpp  compatibility_and_canonical_decomposition.hpp  encoding_assertion.hpp  filter.hpp  iterator_assertion.hpp  normalization_form_c.hpp  normalization_form_d.hpp  normalization_form_kc.hpp  normalization_form_kd.hpp  utf32ne.hpp  utf32ne_string.hpp  utf32ne_string_grapheme.hpp  utf32ne_string_view.hpp  (+15 more)
src/: Encoding.cpp  Extension.cpp  Hangul.cpp  Hash.cpp  IOStream.cpp  Int128.cpp  Interpreter.cpp  Lua.cpp  Main.cpp  Memory.cpp  ProgramOption.cpp  Zip.cpp  c.cpp  encoding.cpp  extension.cpp  hangul.cpp  interpreter.cpp  lua.cpp  main.cpp  zip.cpp
(+125 files in other folders)
